Update k-ctl in prep for auto-deploy
* We remove the CHART_VERSION FILE
* Upgrades the common source such that we have multiple ways of finding
the desired CHART_VERSION
  * ENV variable
  * from the cluster
  * Or the addition of a file in this repo
* Also touches a bit of helmfile template to ensure all of this works
properly

--- a/releases/gitlab.yaml
+++ b/releases/gitlab.yaml
@@ -5,7 +5,7 @@ bases:
 
 ---
 {{- $chart_source := env "CHART_SOURCE" | default (.Environment.Values | getOrNil "gitlab_chart" | default "gitlab/gitlab") }}
-{{- $chart_version := env "CHART_VERSION" | default (.Environment.Values | getOrNil "gitlab_chart_version") | default (readFile "../CHART_VERSION") | trim }}
+{{- $chart_version := env "CHART_VERSION" | default (.Environment.Values | getOrNil "gitlab_chart_version") | trim }}
 repositories:
 {{- if eq $chart_source "gitlab/gitlab" }}
 - name: gitlab
