--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ include:
   - template: Container-Scanning.gitlab-ci.yml
 
 variables:
-  CI_IMAGE_VERSION: 'a54096ea'
+  CI_IMAGE_VERSION: 'v1.12.0'
 
 #############################################################
 
