Reduce our bash usage and cleanup `gitlab-secrets.yaml`
As part of https://gitlab.com/gitlab-com/gl-infra/delivery/issues/699 we
identifed that our usage of bash in places in this repo is overly complicated
and makes things hard to read and debug. With `helmfile` v0.102.1 we get
a bugfix that allows us to start cleaning this up somewhat.

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -18,8 +18,8 @@ releases:
   installed: {{ env "GITLAB_SECRETS_INSTALLED" | default "true" }}
   values:
 {{- $gkms_source := .Environment.Values | getOrNil "gitlab_secrets_gkms_source" | default .Environment.Name }}
-{{- $gkms_omnibus_secrets_base64 := (exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" $gkms_source "-secrets/gitlab-omnibus-secrets/" $gkms_source ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " $gkms_source " --ciphertext-file=- --plaintext-file=-")) | b64enc | quote) }}
-{{- $dev_gitlab_org_docker_pass := exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.gitlab_k8s.\"k8s-workloads-deploy-token\"'")) }}
+{{- $gkms_omnibus_secrets := exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" $gkms_source "-secrets/gitlab-omnibus-secrets/" $gkms_source ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " $gkms_source " --ciphertext-file=- --plaintext-file=-")) }}
+{{- $dev_gitlab_org_docker_pass := $gkms_omnibus_secrets | exec "jq" (list "-jc" ".gitlab_k8s.\"k8s-workloads-deploy-token\"") }}
     - resources:
       - apiVersion: v1
         kind: Secret
@@ -40,7 +40,7 @@ releases:
               provider: Google
               google_project: {{ .Environment.Values.google_project }}
               google_json_key_string: |
-{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"gitlab-server\".\"google-creds\".json_base64'")) | b64dec | trimSuffix "\n" | indent 16 }}
+{{ ($gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64")) | b64dec | trimSuffix "\n" | indent 16 }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -48,7 +48,7 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           provider:
-{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".omniauth_providers[0]'")) | quote | indent 14 }}
+{{ $gkms_omnibus_secrets | exec "jq" (list "-jc" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".omniauth_providers[0]") | quote | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -56,9 +56,9 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           registry-auth.crt: |
-{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate'")) | indent 14 }}
+{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate") | indent 14 }}
           registry-auth.key: |
-{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"omnibus-gitlab\".gitlab_rb.registry.internal_key'")) | indent 14 }}
+{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"omnibus-gitlab\".gitlab_rb.registry.internal_key") | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -77,49 +77,49 @@ releases:
             delete:
               enabled: true
           gcs.json: |
-{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"gitlab-server\".\"google-creds\".json_base64'")) | b64dec | trimSuffix "\n" | indent 14 }}
+{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: registry-httpsecret-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.registry.http_secret'")) | quote }}
+          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.registry.http_secret") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-postgres-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password'")) | quote }}
+          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-redis-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password'")) | quote }}
+          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-smtp-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password'")) | quote }}
+          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-workhorse-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token'")) | quote }}
+          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-gitaly-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token'")) | quote }}
+          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -128,15 +128,15 @@ releases:
         stringData:
           secrets.yml: |
             production:
-              secret_key_base: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".secret_key_base'")) }}
-              otp_key_base: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".otp_key_base'")) }}
-              db_key_base: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_key_base'")) }}
+              secret_key_base: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".secret_key_base") }}
+              otp_key_base: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".otp_key_base") }}
+              db_key_base: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_key_base") }}
               openid_connect_signing_key: |
-{{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".openid_connect_signing_key'")) | trimSuffix "\n" | indent 16 }}
+{{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".openid_connect_signing_key") | trimSuffix "\n" | indent 16 }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-mailroom-imap-v1
           namespace: {{ $namespace }}
         stringData:
-          password: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password'")) }}
+          password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password") }}
