Initial config for plantuml

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -27,3 +27,5 @@ environments:
     values:
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
+  minikube:
+    values: []
