--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -1,7 +1,7 @@
 ---
 bases:
-  - "../bases/helmDefaults.yaml"
-  - "../bases/environments.yaml"
+  - "../../bases/helmDefaults.yaml"
+  - "../../bases/environments.yaml"
 
 ---
 {{ $namespace := .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
