--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -6,3 +6,5 @@ bases:
 helmfiles:
   - path: releases/gitlab-secrets/helmfile.yaml
   - path: releases/gitlab/helmfile.yaml
+
+missingFileHandler: Error
