--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,10 +93,14 @@ container_scanning:
   # It is necessary
   # so we can import the job and extend it for
   # the different environments.
-  when: never
   variables:
     GIT_STRATEGY: fetch
     CI_APPLICATION_REPOSITORY: dev.gitlab.org:5005/gitlab/charts/components/images/gitlab-container-registry
+  rules:
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_COMMIT_BRANCH
+      when: never
 
 # The following environment jobs are identical
 # except they read the tag version from the corresponding
