--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ variables:
         resp=$(curl -s --header "PRIVATE-TOKEN: $GITLAB_OPS_API_TOKEN" "$status_url")
         status=$(echo "$resp" | jq -r '.status')
         echo "Got pipeline status $status, retry $retry/10"
-        [[ $status =~ "(success|failed|canceled)" ]] && break
+        [[ $status == "success" || $status == "failed" || $status == "canceled" ]] && break
         sleep 30
       done
 
