Uses the new diff notifier for dry-runs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -134,7 +134,7 @@ notify_com_mr:
     - .only-auto-deploy-false
   stage: check
   script:
-    - /k8s-workloads/notify-mr
+    - /k8s-workloads/notify-mr -s
   # It is possible that this job will fail if a branch is created
   # without a corresponding MR, for this reason we allow it to
   # fail
