WIP: local secrets for minikube

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -27,3 +27,7 @@ environments:
     values:
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
+  minikube:
+    values:
+      - local_secrets: true
+        google_project: "TODO"
