--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -4,7 +4,15 @@ bases:
   - "../../bases/environments.yaml"
 
 ---
-{{ $namespace := .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+{{- $omnibus_secrets := "" -}}
+{{- if .Values | getOrNil "local_secrets" | default false -}}
+{{- $omnibus_secrets = readFile "private/secrets.json" }}
+{{- else -}}
+{{- $gkms_source := .Environment.Values | getOrNil "gitlab_secrets_gkms_source" | default .Environment.Name }}
+{{- $omnibus_secrets = exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" $gkms_source "-secrets/gitlab-omnibus-secrets/" $gkms_source ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " $gkms_source " --ciphertext-file=- --plaintext-file=-")) }}
+{{- end -}}
+
+{{- $namespace := .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" -}}
 repositories:
 # Kubernetes incubator repo of helm charts
 - name: "kubernetes-incubator"
@@ -17,9 +25,6 @@ releases:
   version: "0.2.3"
   installed: {{ env "GITLAB_SECRETS_INSTALLED" | default "true" }}
   values:
-{{- $gkms_source := .Environment.Values | getOrNil "gitlab_secrets_gkms_source" | default .Environment.Name }}
-{{- $gkms_omnibus_secrets := exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" $gkms_source "-secrets/gitlab-omnibus-secrets/" $gkms_source ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " $gkms_source " --ciphertext-file=- --plaintext-file=-")) }}
-{{- $dev_gitlab_org_docker_pass := $gkms_omnibus_secrets | exec "jq" (list "-jc" ".gitlab_k8s.\"k8s-workloads-deploy-token\"") }}
     - resources:
       - apiVersion: v1
         kind: Secret
@@ -29,7 +34,8 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           .dockerconfigjson: |
-            {"auths":{"dev.gitlab.org:5005":{"username":"k8s-workloads-deploy-token","password":{{ $dev_gitlab_org_docker_pass | quote }},"auth":{{ (list "k8s-workloads-deploy-token:" $dev_gitlab_org_docker_pass) | join "" | b64enc | quote }}}}}
+            {{- $dev_gitlab_org_docker_pass := $omnibus_secrets | exec "jq" (list "-jc" ".gitlab_k8s.\"k8s-workloads-deploy-token\"") }}
+            {"auths":{"dev.gitlab.org:5005":{"username":"k8s-workloads-deploy-token","password":{{ $omnibus_secrets | exec "jq" (list "-jc" ".gitlab_k8s.\"k8s-workloads-deploy-token\"") | quote }},"auth":{{ (list "k8s-workloads-deploy-token:" $dev_gitlab_org_docker_pass) | join "" | b64enc | quote }}}}}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -40,7 +46,7 @@ releases:
               provider: Google
               google_project: {{ .Environment.Values.google_project }}
               google_json_key_string: |
-{{ ($gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64")) | b64dec | trimSuffix "\n" | indent 16 }}
+{{ ($omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64")) | b64dec | trimSuffix "\n" | indent 16 }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -48,7 +54,7 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           provider:
-{{ $gkms_omnibus_secrets | exec "jq" (list "-jc" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".omniauth_providers[0]") | quote | indent 14 }}
+{{ $omnibus_secrets | exec "jq" (list "-jc" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".omniauth_providers[0]") | quote | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -56,9 +62,9 @@ releases:
           namespace: {{ $namespace }}
         stringData:
           registry-auth.crt: |
-{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate") | indent 14 }}
+{{ $omnibus_secrets | exec "jq" (list "-r" ".\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate") | indent 14 }}
           registry-auth.key: |
-{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"omnibus-gitlab\".gitlab_rb.registry.internal_key") | indent 14 }}
+{{ $omnibus_secrets | exec "jq" (list "-r" ".\"omnibus-gitlab\".gitlab_rb.registry.internal_key") | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -77,49 +83,49 @@ releases:
             delete:
               enabled: true
           gcs.json: |
-{{ $gkms_omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
+{{ $omnibus_secrets | exec "jq" (list "-r" ".\"gitlab-server\".\"google-creds\".json_base64") | b64dec | trimSuffix "\n" | indent 14 }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: registry-httpsecret-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.registry.http_secret") | quote }}
+          secret: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.registry.http_secret") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-postgres-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password") | quote }}
+          secret: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-redis-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password") | quote }}
+          secret: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-smtp-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password") | quote }}
+          secret: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-workhorse-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token") | quote }}
+          secret: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-gitaly-credential-v1
           namespace: {{ $namespace }}
         stringData:
-          secret: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token") | quote }}
+          secret: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token") | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
@@ -128,15 +134,15 @@ releases:
         stringData:
           secrets.yml: |
             production:
-              secret_key_base: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".secret_key_base") }}
-              otp_key_base: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".otp_key_base") }}
-              db_key_base: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_key_base") }}
+              secret_key_base: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".secret_key_base") }}
+              otp_key_base: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".otp_key_base") }}
+              db_key_base: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_key_base") }}
               openid_connect_signing_key: |
-{{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".openid_connect_signing_key") | trimSuffix "\n" | indent 16 }}
+{{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".openid_connect_signing_key") | trimSuffix "\n" | indent 16 }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-mailroom-imap-v1
           namespace: {{ $namespace }}
         stringData:
-          password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password") }}
+          password: {{ $omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password") }}
